--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <!-- <script>const name = prompt("Hello", "18"); </script> -->
 
-    <script src="Java.js"></script>
+    <script src="lesson 4.js"></script>
     
 </body>
 </html>
